# rome_naf

./: .env.dist  .gitignore  Cargo.toml  Makefile  docker-compose.yml
docker/: Dockerfile
migrations/2021-09-09-235355_create_naf/: down.sql  up.sql
migrations/2021-09-16-093209_create_keywords/: up.sql
migrations/2021-09-16-224727_create_rome/: down.sql  up.sql
migrations/2021-09-17-180353_create_rome_nafs_table/: down.sql  up.sql
migrations/2021-09-19-161155_create_keyword_nafs_table/: down.sql  up.sql
migrations/2023-08-30-122310_create_specialtys/: down.sql  up.sql
src/: main.rs
src/db/: connection.rs  schema.rs
src/fairing/: cors.rs
src/models/: keyword.rs  keyword_nafs.rs  mod.rs  naf.rs  rome.rs  rome_nafs.rs  specialty.rs
src/requests/: NewKeywordNafsRequest.rs  NewKeywordRequest.rs  NewKeywordSpecialtysRequest.rs  NewNafRequest.rs  NewRomeNafsRequest.rs  NewRomeRequest.rs  NewSpecialtysRequest.rs  mod.rs
src/responses/: ErrorResponse.rs  mod.rs
src/responses/resources/: CreationSuccessRessource.rs  KeywordResource.rs  NafResource.rs  RomeResource.rs  ServerError.rs  SpecialtyResource.rs  SuccessRessource.rs  mod.rs
src/route/: mod.rs
src/route/v1/: mod.rs
src/route/v1/keyword/: keyword.rs  mod.rs
src/route/v1/naf/: mod.rs  naf.rs
src/route/v1/rome/: mod.rs  rome.rs
src/route/v1/specialty/: mod.rs  specialty.rs
