[package]
name = "rust"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# DOC
schemars = "0.8.0"
rocket_okapi = { git = "https://github.com/GREsau/okapi.git", features = ["swagger"]}
okapi = "0.7.0-rc.1"

# DB
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"

# ENV
dotenv = "0.15.0"

# Serialization
serde = "1.0.130"
serde_json = "1.0"
